<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.kumuluz.ee.health</groupId>
    <artifactId>kumuluzee-health</artifactId>
    <version>2.5.0-SNAPSHOT</version>

    <name>KumuluzEE Health</name>

    <inceptionYear>2017</inceptionYear>
    <description>
        KumuluzEE Health extension provides consistent, unified way of performing microservice health checks and exposing health information.
    </description>

    <url>https://ee.kumuluz.com</url>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <jaxb-api.version>2.3.1</jaxb-api.version>

        <kumuluzee.version>3.8.0</kumuluzee.version>

        <kumuluzee-openapi-mp.version>1.4.0</kumuluzee-openapi-mp.version>

        <microprofile-health.version>2.2</microprofile-health.version>

        <jackson.version>2.9.9</jackson.version>
        <jedis.version>3.0.1</jedis.version>
        <mongo-driver.version>3.10.2</mongo-driver.version>
        <amqp-client.version>5.7.2</amqp-client.version>
        <kafka-clients.version>2.6.0</kafka-clients.version>

        <testng.version>6.9.9</testng.version>
        <kumuluzee-arquillian-container.version>1.1.0</kumuluzee-arquillian-container.version>
        <httpclient.version>4.5.13</httpclient.version>
        <h2.version>2.0.206</h2.version>

        <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
        <nexus.staging.plugin.version>1.6.8</nexus.staging.plugin.version>
        <gpg.plugin.version>1.6</gpg.plugin.version>
        <surefire.plugin.version>2.22.1</surefire.plugin.version>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:kumuluz/kumuluzee-health.git</connection>
        <developerConnection>scm:git:git@github.com:kumuluz/kumuluzee-health.git</developerConnection>
        <url>git@github.com:kumuluz/kumuluzee-health.git</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/kumuluz/kumuluzee-health/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <name>KumuluzEE Development Team</name>
            <id>kumuluz</id>
            <email>info@kumuluz.com</email>
            <url>https://github.com/kumuluz</url>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>sonatype-snapshots</id>
            <name>OSS Sonatype repo (snapshots)</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.kumuluz.ee</groupId>
                <artifactId>kumuluzee-bom</artifactId>
                <version>${kumuluzee.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.kumuluz.ee</groupId>
            <artifactId>kumuluzee-cdi-weld</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.kumuluz.ee</groupId>
            <artifactId>kumuluzee-jax-rs-jersey</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.eclipse.microprofile.health</groupId>
            <artifactId>microprofile-health-api</artifactId>
            <version>${microprofile-health.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- clients -->
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>${jedis.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>${mongo-driver.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.rabbitmq</groupId>
            <artifactId>amqp-client</artifactId>
            <version>${amqp-client.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
            <version>${kafka-clients.version}</version>
            <optional>true</optional>
        </dependency>

        <!-- OpenAPI MP integration -->
        <dependency>
            <groupId>com.kumuluz.ee.openapi</groupId>
            <artifactId>kumuluzee-openapi-mp-common</artifactId>
            <version>${kumuluzee-openapi-mp.version}</version>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.eclipse.microprofile.health</groupId>
            <artifactId>microprofile-health-tck</artifactId>
            <version>${microprofile-health.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.kumuluz.ee.testing</groupId>
            <artifactId>kumuluzee-arquillian-container</artifactId>
            <version>${kumuluzee-arquillian-container.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${httpclient.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
                <configuration>
                    <dependenciesToScan>
                        <dependency>org.eclipse.microprofile.health:microprofile-health-tck</dependency>
                    </dependenciesToScan>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>${nexus.staging.plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>deploy</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${gpg.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>java9-modules</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>javax.xml.bind</groupId>
                    <artifactId>jaxb-api</artifactId>
                    <version>${jaxb-api.version}</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

</project>